--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -4,15 +4,16 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>EV(+EV) 계산기 | 88st.cloud</title>
-<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." name="description"/>
-<link href="https://88st.cloud/tool/ev/" rel="canonical"/>
+<title>프라그마틱 슬롯 분석기 | RTP·변동성·세션 비용 계산</title>
+<meta content="프라그마틱 슬롯(및 일반 슬롯) 플레이 전, RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 한 번에 계산합니다." name="description"/>
+<meta name="keywords" content="프라그마틱 슬롯 분석기, 슬롯 RTP, 슬롯 변동성, 슬롯 기대손실, 뱅크롤 계산, 슬롯 세션 관리"/>
+<link href="https://88st.cloud/tool-slot/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="EV(+EV) 계산기 | 88st.cloud" property="og:title"/>
-<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." property="og:description"/>
-<meta content="https://88st.cloud/tool/ev/" property="og:url"/>
+<meta content="프라그마틱 슬롯 분석기 | RTP·변동성·세션 비용" property="og:title"/>
+<meta content="RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 빠르게 계산합니다." property="og:description"/>
+<meta content="https://88st.cloud/tool-slot/" property="og:url"/>
 <style>
 :root{
   /* Theme (auto/preset) */
@@ -113,7 +114,46 @@ footer{ margin-top:16px; color:var(--muted-2); font-size:12px; line-height:1.6; 
 }
 
 </style>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "RTP는 어디서 확인하나요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "같은 슬롯이라도 운영사/카지노에 따라 RTP 버전이 다를 수 있습니다. 게임 내 정보(i), 페이테이블, 또는 운영사의 RTP 표기를 확인한 뒤 입력해 주세요."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "변동성(Volatility)은 왜 중요한가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "변동성은 단기 결과의 출렁임(분산)을 의미합니다. RTP가 같아도 고변동 슬롯은 손실/이익 구간이 크게 흔들려 권장 뱅크롤이 더 크게 필요할 수 있습니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "기대 손실은 정답인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "아닙니다. 기대 손실은 RTP 기반 장기 평균(이론값)이며, 실제 세션 결과는 운/보너스 히트/변동성에 따라 크게 달라질 수 있습니다."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "권장 뱅크롤/손절선 기준은 무엇인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "권장 뱅크롤은 변동성에 따라 베팅 단위의 배수로 제안하는 참고 수치이며, 손절선은 과몰입 방지를 위해 뱅크롤의 약 30%로 표시했습니다."
+      }
+    }
+  ]
+}
+</script>
 
 <style id="v13_1_theme_override">
 /* === v13.1 look unify (from main index) === */
@@ -208,12 +248,22 @@ a{ color:inherit; }
     {
       "@type": "ListItem",
       "position": 2,
-      "name": "EV(+기대값) 계산기",
-      "item": "https://88st.cloud/tool/ev/"
+      "name": "프라그마틱 슬롯 분석기",
+      "item": "https://88st.cloud/tool-slot/"
     }
   ]
 }
 </script>
+
+<script type="application/ld+json">{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "프라그마틱 슬롯 분석기",
+  "applicationCategory": "CalculatorApplication",
+  "operatingSystem": "Web",
+  "url": "https://88st.cloud/tool-slot/",
+  "description": "RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 계산하는 웹 도구"
+}</script>
 <script src="/assets/js/88st-analytics.js?v=VIP4_20260213_07"></script>
 <script defer="" src="/assets/js/vendor-teasers.js?v=VIP4_20260213_07"></script>
 <link href="/assets/vendor-teasers.css?v=VIP4_20260213_07" rel="stylesheet"/>
@@ -227,114 +277,170 @@ a{ color:inherit; }
 <body>
 <div class="wrap">
 <div class="topbar">
-<div class="brand"><span class="badge">88</span> EV 계산기</div>
+<div class="brand"><span class="badge">88</span> 프라그마틱 슬롯 분석기</div>
 <div aria-label="바로가기" class="navlinks">
 <a href="/" rel="home">홈</a>
-<a href="/analysis/">분석기</a>
-<a href="/tool-margin/">마진</a>
-<a href="/tool-ev/">EV</a>
-<a href="/tool-odds/">배당↔확률</a>
+<a href="/analysis/">스포츠 분석기</a>
+<a href="/tool-casino/">카지노 전략</a>
+<a href="/tool-minigame/">미니게임</a>
+<a href="/tool-slot/">슬롯 분석기</a>
 </div>
 </div>
 <div class="hero">
-<h1>EV(+EV) 계산기</h1>
-<p>배당과 내 추정 승률을 넣으면 손익분기점 대비 +EV / -EV 여부와 기대수익을 계산합니다.<br/><span class="small">※ 정보 제공/참고용 · 결과를 보장하지 않습니다.</span></p>
+<h1>프라그마틱 슬롯 분석기</h1>
+<p>RTP·변동성·베팅·스핀수로 <b>총베팅</b>, <b>기대 손실(이론)</b>, <b>권장 뱅크롤</b>을 한 번에 계산합니다.<br/><span class="small">※ 정보 제공/참고용 · 실제 결과는 변동성이 매우 큽니다.</span></p>
 </div>
 <div class="grid">
 <div class="card">
 <h2>입력</h2>
 <div class="row">
-<div class="field">
-<label for="odds">배당</label>
-<input id="odds" inputmode="decimal" placeholder="예: 1.90" value="1.90"/>
+<div class="field" style="min-width:220px;">
+<label for="slotName">게임명(선택)</label>
+<input id="slotName" placeholder="예: Gates of Olympus" value=""/>
 </div>
 <div class="field">
-<label for="p">내 추정 승률(%)</label>
-<input id="p" inputmode="decimal" placeholder="예: 55" value="55"/>
+<label for="rtp">RTP(%)</label>
+<input id="rtp" inputmode="decimal" placeholder="예: 96" value="96"/>
 </div>
 <div class="field">
-<label for="stake">베팅 금액</label>
-<input id="stake" inputmode="decimal" placeholder="예: 10000" value="10000"/>
+<label for="vol">변동성</label>
+<select id="vol">
+<option value="low">저변동</option>
+<option value="mid" selected>중변동</option>
+<option value="high">고변동</option>
+<option value="vhigh">초고변동</option>
+</select>
+</div>
+<div class="field">
+<label for="bet">스핀당 베팅(원)</label>
+<input id="bet" inputmode="decimal" placeholder="예: 1000" value="1000"/>
+</div>
+<div class="field">
+<label for="spins">스핀 수</label>
+<input id="spins" inputmode="numeric" placeholder="예: 300" value="300"/>
 </div>
 </div>
 <div class="btnrow">
 <div class="btn" id="calcBtn">계산하기</div>
 <div class="btn secondary" id="resetBtn">초기화</div>
 </div>
-<div class="out small">손익분기점(1/배당)과 비교해 +EV / -EV 여부를 확인합니다.</div>
+<div class="out" id="hint">RTP는 “장기 평균 회수율”입니다. 실제 세션 결과는 변동성이 크게 작용합니다.</div>
 </div>
 <div class="card">
 <h2>결과</h2>
 <div class="kv">
-<div class="item"><div class="k">손익분기점 승률</div><div class="v" id="be">-</div></div>
-<div class="item"><div class="k">EV (금액)</div><div class="v" id="evAmt">-</div></div>
-<div class="item"><div class="k">EV (수익률)</div><div class="v" id="evPct">-</div></div>
-<div class="item"><div class="k">판정</div><div class="v" id="judge">-</div></div>
+<div class="item"><div class="k">총 베팅액</div><div class="v" id="outTotal">-</div></div>
+<div class="item"><div class="k">기대 반환액(RTP)</div><div class="v" id="outReturn">-</div></div>
+<div class="item"><div class="k">기대 손실(이론)</div><div class="v" id="outLoss">-</div></div>
+<div class="item"><div class="k">손실률</div><div class="v" id="outLossRate">-</div></div>
+<div class="item"><div class="k">권장 뱅크롤(세션)</div><div class="v" id="outBankroll">-</div></div>
+<div class="item"><div class="k">권장 손절선(참고)</div><div class="v" id="outStop">-</div></div>
 </div>
 <div class="sep"></div>
 <div class="small" id="explain"></div>
 </div>
 </div>
 <script>
-function num(v){ const x=parseFloat(v); return (isFinite(x)) ? x : NaN; }
-function pct(x){ return (x*100).toFixed(2) + "%"; }
-function won(x){ 
-  if(!isFinite(x)) return "-";
-  const s = (x>=0? "" : "-");
-  const n = Math.abs(x);
-  return s + Math.round(n).toLocaleString() + "원";
-}
-function calc(){
-  const odds=num(document.getElementById("odds").value);
-  const p=num(document.getElementById("p").value)/100;
-  const stake=num(document.getElementById("stake").value);
-  if(!isFinite(odds) || odds<=1){ alert("배당을 올바르게 입력해 주세요 (1.01 이상)."); return; }
-  if(!isFinite(p) || p<=0 || p>=1){ alert("승률(%)을 1~99 사이로 입력해 주세요."); return; }
-  if(!isFinite(stake) || stake<=0){ alert("베팅 금액을 입력해 주세요."); return; }
+(function(){
+  function num(v){
+    const x = parseFloat(String(v||'').replace(/,/g,''));
+    return (isFinite(x) && x>=0) ? x : NaN;
+  }
+  function fmtWon(x){
+    if(!isFinite(x)) return "-";
+    const v = Math.round(x);
+    return v.toLocaleString('ko-KR') + "원";
+  }
+  function clamp(x, a, b){ return Math.max(a, Math.min(b, x)); }
 
-  const be = 1/odds;
-  const winProfit = (odds-1)*stake;
-  const ev = p*winProfit - (1-p)*stake;
-  const evRate = ev / stake;
+  const VOL_MULT = { low:120, mid:220, high:380, vhigh:550 };
 
-  document.getElementById("be").textContent = pct(be);
-  document.getElementById("evAmt").textContent = won(ev);
-  document.getElementById("evPct").textContent = pct(evRate);
-  document.getElementById("judge").textContent = (ev>0? "+EV" : (ev<0? "-EV" : "0"));
+  function calc(silent){
+    const name = (document.getElementById('slotName').value||'').trim();
+    const rtp = num(document.getElementById('rtp').value);
+    const vol = document.getElementById('vol').value;
+    const bet = num(document.getElementById('bet').value);
+    const spins = num(document.getElementById('spins').value);
 
-  document.getElementById("explain").textContent =
-    `손익분기점은 ${pct(be)} 입니다. 내 추정 승률이 이보다 높으면 +EV 가능성이 있습니다(장기 평균 관점).`;
-}
-document.getElementById("calcBtn").addEventListener("click", calc);
-document.getElementById("resetBtn").addEventListener("click", ()=>{
-  document.getElementById("odds").value="1.90";
-  document.getElementById("p").value="55";
-  document.getElementById("stake").value="10000";
-  calc();
-});
-["odds","p","stake"].forEach(id=> document.getElementById(id).addEventListener("input", ()=> calc()));
-calc();
+    if(!isFinite(rtp) || rtp<=0 || rtp>100){ if(!silent) alert('RTP(%)를 0~100 사이로 입력해 주세요.'); return; }
+    if(!isFinite(bet) || bet<=0){ if(!silent) alert('스핀당 베팅(원)을 올바르게 입력해 주세요.'); return; }
+    if(!isFinite(spins) || spins<=0){ if(!silent) alert('스핀 수를 올바르게 입력해 주세요.'); return; }
+
+    const total = bet * spins;
+    const expectedReturn = total * (rtp/100);
+    const expectedLoss = total - expectedReturn;
+    const lossRate = (100 - rtp);
+
+    const mult = VOL_MULT[vol] || VOL_MULT.mid;
+    const bankroll = bet * mult;
+    const stop = bankroll * 0.30;
+
+    document.getElementById('outTotal').textContent = fmtWon(total);
+    document.getElementById('outReturn').textContent = fmtWon(expectedReturn);
+    document.getElementById('outLoss').textContent = fmtWon(expectedLoss);
+    document.getElementById('outLossRate').textContent = lossRate.toFixed(2) + '%';
+    document.getElementById('outBankroll').textContent = fmtWon(bankroll);
+    document.getElementById('outStop').textContent = fmtWon(stop);
+
+    const volLabel = ({low:'저변동', mid:'중변동', high:'고변동', vhigh:'초고변동'})[vol] || '중변동';
+    const namePart = name ? `
+· 게임: ${name}` : '';
+
+    const m = clamp(Math.round(mult/10)*10, 100, 700);
+    document.getElementById('explain').textContent =
+      `요약: ${fmtWon(bet)} × ${spins.toLocaleString('ko-KR')}회 = 총 ${fmtWon(total)}
+` +
+      `RTP ${rtp.toFixed(2)}% 기준, 이론 손실률은 약 ${lossRate.toFixed(2)}% 입니다.
+` +
+      `${volLabel} 기준 권장 뱅크롤은 “약 ${m}배 베팅단위” 수준으로 표시했습니다. (참고용)` +
+      namePart;
+  }
+
+  function reset(){
+    document.getElementById('slotName').value = '';
+    document.getElementById('rtp').value = '96';
+    document.getElementById('vol').value = 'mid';
+    document.getElementById('bet').value = '1000';
+    document.getElementById('spins').value = '300';
+    calc(true);
+  }
+
+  document.getElementById('calcBtn').addEventListener('click', ()=> calc(false));
+  document.getElementById('resetBtn').addEventListener('click', reset);
+
+  ['slotName','rtp','vol','bet','spins'].forEach(id=>{
+    const el = document.getElementById(id);
+    if(!el) return;
+    el.addEventListener('input', ()=> calc(true));
+    el.addEventListener('change', ()=> calc(true));
+  });
+
+  calc(true);
+})();
 </script>
+
+<!-- Tool share/history config (auto UI injection) -->
 <script type="application/json" id="__88stToolConfig">
 {
-  "tool": "ev",
-  "title": "EV 계산기",
-  "inputs": ["odds", "p", "stake"],
+  "tool": "slot",
+  "title": "슬롯 분석기",
+  "inputs": ["slotName", "rtp", "vol", "bet", "spins"],
   "outputs": {
-    "be": "#be",
-    "evAmt": "#evAmt",
-    "evPct": "#evPct",
-    "judge": "#judge"
+    "total": "#outTotal",
+    "loss": "#outLoss",
+    "bankroll": "#outBankroll"
   },
   "shareParams": {
-    "odds": "o",
-    "p": "p",
-    "stake": "s"
+    "slotName": "g",
+    "rtp": "r",
+    "vol": "v",
+    "bet": "b",
+    "spins": "n"
   },
   "examples": [
-    {"label": "+EV 예시", "values": {"odds": "2.10", "p": "55", "stake": "10000"}},
-    {"label": "-EV 예시", "values": {"odds": "1.80", "p": "50", "stake": "10000"}},
-    {"label": "보수 예시", "values": {"odds": "1.95", "p": "53", "stake": "20000"}}
+    {"label": "96% / 고변동", "values": {"rtp": "96", "vol": "high", "bet": "1000", "spins": "300"}},
+    {"label": "94% / 중변동", "values": {"rtp": "94", "vol": "mid", "bet": "2000", "spins": "200"}},
+    {"label": "97% / 저변동", "values": {"rtp": "97", "vol": "low", "bet": "500", "spins": "500"}}
   ]
 }
 </script>
@@ -360,28 +466,29 @@ calc();
 <h2>자주 묻는 질문(FAQ)</h2>
 <div class="faq">
 <details>
-<summary>손익분기점 승률은 왜 1/배당인가요?</summary>
-<div class="small" style="margin-top:8px; line-height:1.6;">배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정).</div>
+<summary>RTP는 어디서 확인하나요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">같은 슬롯이라도 운영사/카지노에 따라 RTP 버전이 다를 수 있습니다. 가능하면 <b>게임 내 정보(i)</b>, 페이테이블, 또는 해당 운영사의 공지에서 RTP(%)를 확인한 뒤 입력해 주세요.</div>
 </details>
 <details>
-<summary>+EV이면 무조건 이기나요?</summary>
-<div class="small" style="margin-top:8px; line-height:1.6;">아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다.</div>
+<summary>변동성(Volatility)은 왜 중요한가요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">변동성은 “한 세션에서 출렁임(분산)”을 뜻합니다. RTP가 같아도 고변동 슬롯은 손실/이익 구간이 더 크게 흔들리기 때문에, 같은 베팅이라도 <b>권장 뱅크롤</b>이 더 크게 잡힙니다.</div>
 </details>
 <details>
-<summary>추정 승률은 어떻게 잡나요?</summary>
-<div class="small" style="margin-top:8px; line-height:1.6;">최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다.</div>
+<summary>기대 손실은 ‘정답’인가요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">아닙니다. 기대 손실은 RTP 기반 <b>장기 평균(이론값)</b>입니다. 실제 결과는 단기 운/보너스 히트/변동성에 따라 크게 달라집니다. 이 도구는 “예측”이 아니라 <b>세션 비용·리스크 관리</b> 목적입니다.</div>
 </details>
 <details>
-<summary>마진(오버라운드)을 제거한 EV도 있나요?</summary>
-<div class="small" style="margin-top:8px; line-height:1.6;">가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다.</div>
+<summary>권장 뱅크롤/손절선은 어떤 기준인가요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">권장 뱅크롤은 변동성에 따라 “베팅 단위의 배수”로 제안하는 참고 수치입니다. 손절선은 과몰입을 줄이기 위해 뱅크롤의 약 30%로 표시했습니다. 본인 성향에 맞게 더 보수적으로 잡는 것을 권장합니다.</div>
 </details>
 <details>
-<summary>추천 배팅 금액도 계산되나요?</summary>
-<div class="small" style="margin-top:8px; line-height:1.6;">현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다.</div>
-</details></div>
+<summary>프라그마틱 슬롯만 가능한가요?</summary>
+<div class="small" style="margin-top:8px; line-height:1.6;">아니요. RTP/변동성/베팅/스핀수만 알면 대부분의 슬롯에 동일하게 적용할 수 있습니다. (단, RTP 버전은 반드시 확인 권장)</div>
+</details>
+</div>
 </div>
 <footer>
-<div>© 88 — Tools</div>
+<div>© 88 — Slot Analyzer</div>
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
 </div>
@@ -389,12 +496,14 @@ calc();
 <h2>관련 링크</h2>
 <div class="rel-grid">
 <a data-cta="rel_home" href="/">메인</a>
-<a data-cta="rel_odds" href="/#oddsAnalyzerSection">배당 구조 분석기</a>
-<a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
+<a data-cta="rel_odds" href="/tool-odds/">배당 구조 분석기</a>
+<a data-cta="rel_slot" href="/tool-slot/">슬롯 분석기</a>
+<a data-cta="rel_margin2" href="/tool-margin/">마진 계산기</a>
 <a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
 <a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
 <a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
 <a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
+<a data-cta="rel_slot_guide" href="/slot/">슬롯 가이드</a>
 <a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
 </div>
 </section>
